--- a/index.css
+++ b/index.css
@@ -142,3 +142,44 @@ p {
 	fill: #EFDC75;
 }
 
+/* form images */
+
+#form-col {
+  background-image: url('./images/bg-image-form.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.form-titles {
+  color: white !important;
+}
+
+.card-title {
+   color: white !important; 
+}
+
+.card-text {
+  color: white !important; 
+}
+
+#first-card {
+  background-image: url('./images/card-1.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#second-card {
+  background-image: url('./images/card-2.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+#third-card {
+  background-image: url('./images/card-3.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
